2052 [Lame] fixed applying bitrate in ABR mode 
2051 [progress window] changed number formatting

Changelog 2028 --> 2050

Main changes:
[x264]     blu-ray device: added 1440x1080 as supported resolution
[OneClick] added option to mux the audio source file only if the codec is the same as requested
           
Other changes:
[Audio Encoder] added 24 <--> 25 conversions 
[AviSynth] open script handling improved
[Chapter Creator] fixed language tag creation
[FFMSIndexer] added option to select the number of decoding threads. default and recommended value is 1
              changed LoadCPlugin to LoadPlugin for the x64 plugin (requires ffms r507+)
[Flac] enhanced output handling if file already exists
[Lame] fixed always applying bitrate 128 in ABR mode
[MainForm] fixed spelling. Bug #3390630
[Mediainfo] mediainfo details are written into the log for most files/jobs
[OneClick] enhanced error handling
[OneClick] fixed editing of mkv mux jobs
[OneClick] preserve audio track order during processing
[Source Detector] enhanced error handling
[Update] added check so that files can only be installed using the correct MeGUI build
[Video Player] fixed video preview window for some avs scripts (e.g. using ImageSource)
[x264] added --subme 11 (requires x264 revision 2037+)
[x264] blu-ray device: enhanced --sar detection
[x264] fixed maximum --rc-lookahead value. a value > 250 was possible in rare situations. Bug #3383262
[x264] --keyint will not be applied twice if specified in the custom command line
[x264] cosmetics


Changelog 2008 --> 2028

Main changes:
[x264] added target playback device option
       this option restricts or enforces x264 parameters if necessary
       as this option is more powerful as the downloadable x264 profiles they have been removed
[Lame] changed encoding modes to reflect valid values
       Warning: review custom lame presets as there is no full preset update path

Other changes: